[tool.poetry]
name = "dubins_path_planning"
version = "0.1.0"
description = ""
authors = ["pavollukac <p.lukac@djhec.sk>"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-spatial = "^6.4.1"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
